# py-lab1

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: calculator.py  constants.py  exceptions.py  main.py  operators.py  rpn_evaluator.py  token_parser.py
tests/: calculator_test.py  operators_test.py  rpn_evaluator_test.py  token_parser_test.py
