[project]
name = "lab1"
version = "0.1.0"
description = "Calculator M3 lab"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.2",
]

[tool.ruff]
src = ["src", "tests"]
lint.select = ["E", "F", "W", "I", "N", "UP", "B", "A"]
fix = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
